# pisama-n8n

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dogfood.yml  publish-engine.yml  security.yml
benchmarks/: golden.json  parity_check.py
benchmarks/fixtures/executions/: timeout.json
benchmarks/fixtures/structural/: clean-linear.json  complexity-spaghetti.json  cycle-unbounded.json
cloud/: fix_service.py
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.oss.config.ts  playwright.self-host.config.ts  tailwind.config.ts
dashboard/docs/plans/: dashboard-build.md
dashboard/src/: proxy.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/app/detections/: DetectionsClient.tsx  page.tsx
dashboard/src/app/onboarding/: page.tsx
dashboard/src/app/overview/: OverviewClient.tsx  page.tsx
dashboard/src/app/settings/: SettingsClient.tsx  page.tsx
dashboard/src/app/sign-in/: page.tsx
dashboard/src/components/common/: Header.tsx  Layout.tsx  Sidebar.tsx  (+1 more)
dashboard/src/hooks/: useDetections.ts
dashboard/src/lib/: flags.ts  saas.ts  saasAuth.ts  severity-config.ts  utils.ts
dashboard/src/types/: next-auth.d.ts
dashboard/tests/: _auth.ts  oss.dashboard.spec.ts  saas.public.spec.ts  self-host.dashboard.spec.ts  settings.saas.spec.ts
deploy/: Dockerfile.server  deploy-cloud-dogfood.sh  deploy-dashboard.sh  deploy-demo-api.sh  docker-compose.dogfood.postgres.yml  docker-compose.dogfood.yml  docker-compose.yml  fly.cloud-dogfood.toml  fly.toml
docs/: dogfooding.md  input-schema-guardrail.md
docs/plans/: dashboard-outcome-metrics.md  fe-provenance-drift.md  n8n-guardrail-first-class.md  oss-honest-metrics.md  server-build.md
engine/: CHANGELOG.md  README.md  pyproject.toml
engine/pisama_n8n_engine/: __init__.py  guardrails.py  orchestrator.py  security.py
engine/pisama_n8n_engine/detect/: base.py  calibration.py  n8n_constants.py  n8n_utils.py  runtime.py  truncation.py
engine/pisama_n8n_engine/detect/structural/: __init__.py  complexity_detector.py  cycle_detector.py  error_detector.py  resource_detector.py  schema_detector.py  timeout_detector.py
engine/pisama_n8n_engine/trace/: base_provider.py  content_filter.py  execution.py  flatted.py  n8n_parser.py  universal_trace.py
engine/tests/: conftest.py  test_agent_diagnostics.py  test_execution_lane.py  test_execution_parsing.py  test_flatted_decoding.py  test_guardrails.py  test_orchestrator.py  test_public_api.py  test_real_cloud_execution.py  test_structural_detectors.py  test_universal_trace.py
eval/: README.md  baseline_controlled.json  baseline_guard_campaign.json  baseline_real.json  baseline_realworld.json  baseline_realworld_holdout.json  generate_real_corpus.py  mine_real_world.py  runtime_eval.py
eval/campaigns/: 2026-07-guard-campaign.md  live_results_2026-07.json  live_subset_2026-07.json  local_results_2026-07.jsonl  manifest_2026-07.json
eval/data/realworld/: rw_033b575eda.json  rw_09c44b9df4.json  rw_0bf6d08585.json  rw_1390c729cd.json  rw_19a4b54815.json  rw_23e7cf23a7.json  rw_281b1e3e33.json  rw_284904fd85.json  rw_297ec57faa.json  rw_2c7a33099f.json  rw_2eb18f5a43.json  rw_34c6a81c19.json  rw_35539864fc.json  rw_37b27a3085.json  rw_3d2b7d96af.json  rw_419cda5f03.json  rw_449bfdfefe.json  rw_46d88d712a.json  rw_47b20d5ae0.json  rw_4c4a24cc68.json  rw_524671d596.json  rw_53215094cd.json  rw_581cc14ef3.json  rw_5826dc4754.json  rw_59de133210.json  rw_5f1727b3f4.json  rw_68cbf01bac.json  rw_6c1c2e6a80.json  rw_7948809a8a.json  rw_7cf025b2ab.json  rw_7e1b541e29.json  rw_7e9aa5d6cc.json  rw_83ffc2c12d.json  rw_846ca13278.json  rw_8ccc1468af.json  rw_8f470b8c2b.json  rw_937703e8ce.json  rw_94e51b8b59.json  rw_98053bd2d4.json  rw_9caf6c24b7.json  (+30 more)
node/: .eslintrc.js  README.md  package.json  tsconfig.json  vitest.config.mjs
node/credentials/: PisamaApi.credentials.ts
node/nodes/Pisama/: Pisama.node.ts
node/test/: pisama-node.test.mjs
scripts/: audit_dogfood_corpus.py  capture_claude_agent_evidence.py  capture_native_agent_evidence.py  corpus_campaign_prepare.py  corpus_campaign_report.py  extract_from_monorepo.py  product_capabilities.py  run_corpus_campaign_local.sh  run_corpus_guard_campaign.py  run_dogfood_pipeline.sh  run_guardrail_lifecycle.py  run_guardrail_lifecycle_gate.sh  seed_hosted.sh  verify_n8n_upgrade_restore.py  verify_selfhost.sh
server/: README.md  pyproject.toml
server/pisama_n8n_server/: app.py  events.py  fixes.py  n8n_client.py  poller.py  processing.py  product_capabilities.generated.json  storage.py
server/pisama_n8n_server/mcp/: __init__.py  __main__.py  server.py  tools.py
server/tests/: test_error_route.py  test_events.py  test_fixes.py  test_guardrail.py  test_ingest_dedup.py  test_mcp_server.py  test_mcp_smoke.py  test_polling.py  test_public_read.py  test_reliability_metrics.py  test_server.py  test_webhook_hmac.py
server/tests/fixtures/complexity/: 01-COMPLEXITY-high-node-count.json  02-COMPLEXITY-deep-branching.json  03-COMPLEXITY-high-cyclomatic.json  04-COMPLEXITY-multi-concern.json  05-COMPLEXITY-many-branches.json  06-COMPLEXITY-nested-loops.json
server/tests/fixtures/executions/data_contract/: CLOUD-112117-missing-required-value.json
server/tests/fixtures/executions/error/: ERROR-01-throw.json  ERROR-02-reference.json  ERROR-03-type.json  ERROR-04-throw.json
server/tests/fixtures/executions/flatted/: FLATTED-01-error.json
server/tests/fixtures/executions/healthy/: HEALTHY-01.json  HEALTHY-02.json  HEALTHY-03.json  HEALTHY-04.json
server/tests/fixtures/executions/resource/: RESOURCE-01-100x500.json  RESOURCE-02-50x1000.json  RESOURCE-03-200x200.json  RESOURCE-04-20x5000.json
server/tests/fixtures/executions/timeout/: TIMEOUT-02.json  TIMEOUT-03.json  TIMEOUT-04.json
(+29 files in other folders)
