[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisama-n8n-server"
version = "0.1.0"
description = "Self-host detection server for n8n workflow executions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "SUL-1.0" }  # Sustainable Use License (fair-code) — see ../LICENSE
authors = [{ name = "Pisama" }]
keywords = ["n8n", "workflow", "failure-detection", "self-host", "server"]

dependencies = [
    "pisama-n8n-engine",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
# Optional so the prod server install never inherits mcp's transitive pins.
mcp = ["mcp>=1.6,<2"]

[project.urls]
Homepage = "https://github.com/Pisama-AI/pisama-n8n"

[tool.hatch.build.targets.wheel]
packages = ["pisama_n8n_server"]

[tool.pytest.ini_options]
# The server has async unit tests (SSE broadcaster, poller). "auto" runs every
# `async def test_*` on the event loop without a per-test marker or an external
# anyio/pytest-asyncio incantation, so the suite is self-contained.
asyncio_mode = "auto"
testpaths = ["tests"]
