[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisama-n8n-server"
version = "0.1.0"
description = "Self-host detection server for n8n workflow executions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "SUL-1.0" }  # Sustainable Use License (fair-code) — see ../LICENSE
authors = [{ name = "Pisama" }]
keywords = ["n8n", "workflow", "failure-detection", "self-host", "server"]

dependencies = [
    "pisama-n8n-engine>=0.1,<0.2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov>=7.0"]
# Optional so the prod server install never inherits mcp's transitive pins.
mcp = ["mcp>=1.6,<2"]

[project.urls]
Homepage = "https://github.com/Pisama-AI/pisama-n8n"
Documentation = "https://github.com/Pisama-AI/pisama-n8n/tree/main/server"
Repository = "https://github.com/Pisama-AI/pisama-n8n"
Issues = "https://github.com/Pisama-AI/pisama-n8n/issues"

[tool.hatch.build.targets.wheel]
packages = ["pisama_n8n_server"]

[tool.pytest.ini_options]
# The server has async unit tests (SSE broadcaster, poller). "auto" runs every
# `async def test_*` on the event loop without a per-test marker or an external
# anyio/pytest-asyncio incantation, so the suite is self-contained.
asyncio_mode = "auto"
testpaths = ["tests"]
